--- a/httpd-cfg/vhost.conf
+++ b/httpd-cfg/vhost.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:8080>
-    DocumentRoot /web/jbcs24/test
+    DocumentRoot /opt/app-root/src
     ServerName eap.app
 
 #    ErrorLog "|/web/jbcs24/sbin/rotatelogs /web/jbcs24/logs/test/test-error_log.%Y%m%d 86400 +540"
@@ -19,12 +19,12 @@
 #JkMount /* tcpwlb
 #JkMount /*.jsp testSvr11
 
-proxypass / http://eap-app.keris.svc:8080
-ProxyPassReverse / http://eap-app.keris.svc:8080
+proxypass / http://eap-app.keris.svc:8080/
+ProxyPassReverse / http://eap-app.keris.svc:8080/
 
-<Directory /web/jbcs24/test>
-    Require all granted
-</Directory>
+#<Directory /web/jbcs24/test>
+#    Require all granted
+#</Directory>
 
 </VirtualHost>
 
