--- a/httpd-cfg/vhost.conf
+++ b/httpd-cfg/vhost.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:8080>
     DocumentRoot /opt/app-root/src
     ServerName eap.app
-
+LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
 #    ErrorLog "|/web/jbcs24/sbin/rotatelogs /web/jbcs24/logs/test/test-error_log.%Y%m%d 86400 +540"
 #    CustomLog "|/web/jbcs24/sbin/rotatelogs /web/jbcs24/logs/test/test-access_log.%Y%m%d 86400 +540" combined
 
@@ -19,8 +19,8 @@
 #JkMount /* tcpwlb
 #JkMount /*.jsp testSvr11
 
-proxypass / http://eap-app.keris.svc:8080/
-ProxyPassReverse / http://eap-app.keris.svc:8080/
+#proxypass / http://eap-app.keris.svc:8080/
+#ProxyPassReverse / http://eap-app.keris.svc:8080/
 
 #<Directory /web/jbcs24/test>
 #    Require all granted
