--- a/httpd-cfg/httpd.conf
+++ b/httpd-cfg/httpd.conf
@@ -144,7 +144,7 @@ DocumentRoot "/opt/app-root/src"
     # http://httpd.apache.org/docs/2.4/mod/core.html#options
     # for more information.
     #
-    Options -Indexes FollowSymLinks
+    Options Indexes FollowSymLinks
 
     #
     # AllowOverride controls what directives may be placed in .htaccess files.
