--- a/httpd-cfg/vhost.conf
+++ b/httpd-cfg/vhost.conf
@@ -21,11 +21,13 @@ LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-A
 
 #proxypass / http://eap-app.keris.svc:8080/
 #ProxyPassReverse / http://eap-app.keris.svc:8080/
-ProxyPass /html !
-ProxyPass /httpd-cfg !
-ProxyPassMatch ^(/.*\.html)$ !
-proxypass / http://cp-was.keris.svc:8080/
-ProxyPassReverse / http://cp-was.keris.svc:8080/
+######################################################
+
+#ProxyPass /html !
+#ProxyPass /httpd-cfg !
+#ProxyPassMatch ^(/.*\.html)$ !
+#proxypass / http://cp-was.keris.svc:8080/
+#ProxyPassReverse / http://cp-was.keris.svc:8080/
 
 #<Directory /web/jbcs24/test>
 #    Require all granted
