--- a/httpd-cfg/vhost.conf
+++ b/httpd-cfg/vhost.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:8080>
-    DocumentRoot /opt/app-root/src
+    DocumentRoot /opt/app-root/src/html
     ServerName eap.app
 LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
 #    ErrorLog "|/web/jbcs24/sbin/rotatelogs /web/jbcs24/logs/test/test-error_log.%Y%m%d 86400 +540"
@@ -29,9 +29,10 @@ LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-A
 #proxypass / http://cp-was.keris.svc:8080/
 #ProxyPassReverse / http://cp-was.keris.svc:8080/
 
-#<Directory /web/jbcs24/test>
-#    Require all granted
-#</Directory>
+<Directory /opt/app-root/src/html>
+    Require all granted
+    Options None
+</Directory>
 
 </VirtualHost>
 
