--- a/httpd-cfg/vhost.conf
+++ b/httpd-cfg/vhost.conf
@@ -29,7 +29,7 @@ LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-A
 #proxypass / http://cp-was.keris.svc:8080/
 #ProxyPassReverse / http://cp-was.keris.svc:8080/
 
-<Directory /opt/app-root/src/html>
+<Directory /opt/app-root/src>
     Require all granted
     Options None
 </Directory>
